--- a/workshop/3-Loops.ipynb
+++ b/workshop/3-Loops.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "### Structure\n",
     "\n",
-    "![For loop](\"img/ForLoop.png\")\n",
+    "![For loop](img/ForLoop.png)\n",
     "\n"
    ]
   },
