add top container filter

--- a/workshop/3-Loops-Logic.ipynb
+++ b/workshop/3-Loops-Logic.ipynb
@@ -45,7 +45,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -57,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -68,19 +67,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logic - Evaluating conditions\n",
+    "\n",
+    "We may want to evaluate some quality of our things as we loop through our list. We can add logical tests. Here are some examples of evaluation in python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluate if things are equal:\n",
+    "\n",
+    "\"a\" == \"a\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compare numbers\n",
+    "\n",
+    "3 < 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can add conditions based on logical tests like the ones above. Here's an example below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using a condition in a loop.\n",
+    "\n",
+    "for number in numbers:\n",
+    "    if number >= 5:\n",
+    "        print(str(number) + \" is greater or equal to five\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# One more example of a more advanced use\n",
-    "\n",
-    "for number in numbers:\n",
-    "    if number >= 5:\n",
-    "        print(str(number) + \" is greater or equal to five\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
