--- a/workshop/2-Aspace_API_intro.ipynb
+++ b/workshop/2-Aspace_API_intro.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What's a REST  or HTTP API?\n",
+    "## What's an HTTP API?\n",
     "\n",
-    "API stands for application programming interface. It's basically set of (hopefully) convenient methods for interacting with and controlling a program. REST APIs make these methods availble via the HTTP protocol. This is the same protocol most of us use daily to browse the web. To use HTTP we send requests to a resource and expect to get a response. For example, when you type https://en.wikipedia.org/wiki/Archive into your web browser, you're sending an HTTP GET request to Wikipedia, and you expect to get the article on Archives back.\n",
+    "API stands for application programming interface. It's basically set of (hopefully) convenient methods for interacting with and controlling a program. HTTP APIs make these methods availble via the HTTP protocol. This is the same protocol most of us use daily to browse the web. To use HTTP we send requests to a resource and expect to get a response. For example, when you type https://en.wikipedia.org/wiki/Archive into your web browser, you're sending an HTTP GET request to Wikipedia, and you expect to get the article on Archives back.\n",
     "\n",
     "We do other types of HTTP requests through our web browsers too, for example, when you fill in a login form with your username and password and hit the login button, you're sending a POST request.: https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol#Request_methods\n",
     "\n",
@@ -23,14 +23,15 @@
    },
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import json"
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# lets make our first request, The reqeusts library will\n",
@@ -48,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "my_request = requests.get('https://en.wikipedia.org/wiki/Archive')"
@@ -57,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We've saved our request, and now we can do stuff with it\n",
@@ -92,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# we need our request making tool, which we \n",
@@ -104,7 +111,7 @@
     "\n",
     "USER = ''\n",
     "PASS = ''\n",
-    "HOST = 'http://localhost:8089'\n",
+    "HOST = ''\n",
     "\n",
     "# Here's our authentication function. It will return a session\n",
     "# token if it works, or the value False if if doesn't\n",
@@ -150,7 +157,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Our first get request to ask for an object. Edit the pattern to select your object:\n",
@@ -164,7 +173,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# we can check our status code, or request content below to see\n",
@@ -181,13 +192,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should see JSON data that looks like it represents the object you found in your browser. Let's try editing some aspect of the data here, and then sending that change back to the API. We'll change the title of the digital object to test."
+    "You should see JSON data that looks like it represents the object you found in your browser. \n",
+    "\n",
+    "### Edit a record \n",
+    "\n",
+    "Let's try editing some aspect of the data here, and then sending that change back to the API. We'll change the title of the digital object to test."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# remember we can select a piece of our JSON data by naming the \n",
@@ -200,7 +217,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Looks like the title is a string, so let's replace it with a new string\n",
@@ -250,7 +269,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Let's try posting our object back up and break down how the request works:\n",
@@ -263,7 +284,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We can see what kind of response we got back the same way we did with our get reqeust\n",
