--- a/workshop/3-Loops-Logic.ipynb
+++ b/workshop/3-Loops-Logic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Doing stuff more than once\n",
+    "# Doing stuff more than once\n",
     "\n",
     "In the last section, we updated a single record using the API. In order to take advantage of the API, we really want to operate on more than one record at a time. We'll need some understanding of creating loops in Python to do that. In partiular, lets focus on the for loop.\n",
     "\n",
@@ -13,7 +13,7 @@
     "- You have a list of 100 records that you've edited using OpenRefine in CSV. You want to send these updated records back up to Aspace. Using a for loop will allow you to define a routine for posting records, and perform it on every record.\n",
     "- You have a list of records and you want to make similar edits to all of them.\n",
     "\n",
-    "### The for loop\n",
+    "## The for loop\n",
     "Lets try writing some for loop examples. We'll need to start with a list of items. I'll start with a list of JSON objects defined below. Lists can contain any data type, lets start with a list of integers."
    ]
   },
@@ -107,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Using a condition in a loop.\n",
@@ -118,13 +120,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "## While Loops\n",
+    "\n",
+    "You can even have a loop do something over and over as long as a condition is true. Take this example which prints a number and adds one to it as long as that number is less than or equal to ten."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# While loop\n",
+    "\n",
+    "n = 0\n",
+    "\n",
+    "while n <= 10:\n",
+    "    print(n)\n",
+    "    n = n + 1"
+   ]
   }
  ],
  "metadata": {
