--- a/jupyter_notebooks/nea_barcodes/Get_Top_Containers-Anonymized.ipynb
+++ b/jupyter_notebooks/nea_barcodes/Get_Top_Containers-Anonymized.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,53 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Add a username and password combination that will give you rights to access the API, as well as the URL of the API.\n",
+    "#You will also need to add the ArchivesSpace URL and a port.\n",
     "USER = ''\n",
     "PASS = ''\n",
     "HOST = ''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# The last page of results (I'm cheating\n",
-    "# a bit because I already know what the last page is from our \n",
-    "# previous excersise). this takes a long time, so we'll pretent\n",
-    "# you have a lot less top level containers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ASpace paginates, so make sure you provide enough pages to cycle at least once through all of the containers.\n",
-    "LAST_PAGE = 250\n",
-    "\n",
-    "#LAST_PAGE = 3\n",
-    "PAGE_SIZE = 150"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Here's our authentication function. It will return a session\n",
-    "# token if it works, or the value False if if doesn't"
    ]
   },
   {
@@ -74,6 +36,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ASpace paginates, so make sure you provide enough pages to cycle at least once through all of the containers.\n",
+    "#LAST_PAGE here refers to the total number of pages the script will cycle through to pull the data you're asking for\n",
+    "LAST_PAGE = 250\n",
+    "\n",
+    "#PAGE_SIZE refers to the number of containers that will cycle through each page.\n",
+    "PAGE_SIZE = 150\n",
+    "#250 pages at 150 containers per page is 37500 total containers. In late 2018, we had approximately 31000 containers in\n",
+    "#ArchivesSpace, so this should ensure that we don't miss any containers in our pagination."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here's our authentication function. It will return a session\n",
+    "# token if it works, or the value False if if doesn't\n",
     "def aspace_auth(host, username, password):\n",
     "    auth = requests.post(host + '/users/' + username + '/login',\n",
     "                        params={'password' : password})\n",
@@ -136,10 +116,10 @@
     "    containers = container_req.json()['results']\n",
     "    \n",
     "    # Create a blank list, later for the URIs \n",
-    "    # of all top level containers containing your search term\n",
+    "    # of all top level containers in your collection\n",
     "    tlc_uri = []\n",
     "    \n",
-    "    # We'll open a file to write our empty containers to\n",
+    "    # We'll open a file to write our empty continers to\n",
     "    fh = open('XXX_containers.jsonl', 'a')\n",
     "    \n",
     "    \n",
@@ -151,8 +131,8 @@
     "            # Set collection to equal the display string \n",
     "            # of the container's first collection\n",
     "            collection = container['collection'][0]['display_string']\n",
-    "            # If that includes the words \"XXXXXXXXXX\"\n",
-    "            if \"XXXXXXXXXX\" in collection:\n",
+    "            # If that includes the collection identifier for the collection you are working with\n",
+    "            if \"XXXXX\" in collection:\n",
     "                # Print the container json to the terminal window\n",
     "                # print (container)\n",
     "                # Add the container json to your file\n",
@@ -164,13 +144,6 @@
     "    # runs it will get the next page\n",
     "    page = page + 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
